overflow fixed

--- a/src/components/EditUser/EditUser.css
+++ b/src/components/EditUser/EditUser.css
@@ -2,7 +2,7 @@
     padding: 65px 10px 10px 10px;
 
     display: flex;
-    height: 100vh;
+    /* height: 100vh; */
     width: 100%;
     flex-direction: column;
     box-sizing: border-box;
@@ -13,7 +13,8 @@
 .nameAndStudentInfo{
     display: flex;
     flex-direction: column;
-    height: 38%;
+    /* height: 38%; */
+    margin-bottom: 10px;
 }
 
 .student{
